优化项目结构

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <link href="/src/asset/icon/icon1.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/src/assets/icon/icon1.svg" rel="icon" type="image/svg+xml"/>
     <title>纯纯算卦</title>
 </head>
 <body>
